--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "parcel": "^2.0.0-beta.2"
   },
   "devDependencies": {
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "push-dir": "^0.4.1"
   }
 }
