--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
+  "staticFiles": {
+    "staticPath": "static"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.0.0-beta.2"
   },
   "devDependencies": {
-    "parcel-plugin-static-files-copy": "^2.6.0",
+    "parcel-reporter-static-files-copy": "^1.2.2",
     "push-dir": "^0.4.1"
   }
 }
